son güncellemeler yapıldı

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=Debug
 logging.level.org.hibernate.jdbc.bind=trace
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.web.authentication.www.BasicAuthenticationFilter=DEBUG
+logging.level.org.springframework.security.authentication.dao.DaoAuthenticationProvider=DEBUG
