--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.username=postgres
 spring.datasource.password=21282553
 spring.jpa.hibernate.ddl-auto=update
 
+cors.allowed-origins=http://localhost:*
+
 logging.level.org.hibernate.SQL=Debug
 logging.level.org.hibernate.jdbc.bind=trace
 
